<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="login_with_google">Masuk dengan Google</string>
    <string name="login_with_facebook">Masuk dengan Facebook</string>
    <string name="or">Atau</string>
    <string name="hint_username_or_email">Username or Email</string>
    <string name="hint_password">Password</string>
    <string name="forgot_password">Forgot password</string>
    <string name="login">Login</string>
    <string name="login_with_fingerprint">Masuk dengan Fingerprint</string>
    <string name="register_now">Belum punya akun? Daftar Sekarang</string>
</resources>